CATS-1407 : modification of detail gift certificate(on adding new detail gift cert obj is null), Adding of loading indicators and Searching indicators

--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -17,7 +17,24 @@
         border: 1px solid #ddd;
     }
 
+    button {
+    border: none;
+    background-color: transparent;
+    outline: none;
+}
+button:focus {
+    border: none;
+}
 
+.loading{
+  float: left;
+    position: relative;
+    left: 600px;
+    top: 0px;
+ 
+      max-width:300px;
+       max-height:300px;
+}
     .dedivtable {
         /*border: 1px solid #ddd;*/
         padding-left: 0px;
@@ -58,10 +75,11 @@
         <div class="portlet-body">
             @*<span class="loading-spnr-da da-data-indicator-ldng"><img src="~/Content/images/loading.gif" alt="loading..." class="loading-spinner"></span>*@
 
+            <img  class="loading"  ng-show="ctrlStatus.loadingDocument || ctrlStatus.loadingUser" src="~/Content/Icons/loading-x.gif" />
 
-            <div class=" table-responsive" style="overflow-x: hidden; min-height: 350px; ">
+            <div class=" table-responsive" style="overflow-x: hidden; min-height: 350px; " >
 
-                <div class="row form-horizontal " style="min-height: 100px;">
+                <div class="row form-horizontal " style="min-height: 100px;"  ng-hide="ctrlStatus.loadingDocument ||  ctrlStatus.loadingUser">
                     <div class="col-sm-2 ">
 
                         <Label><small>Start Date</small></Label>
@@ -73,7 +91,7 @@
 
                     </div>
 
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" >
                         <Label><small>  User</small></Label>
 
                         <select id="User" multiple="multiple" ng-disabled="ctrlStatus.loadingUser" class="form-control" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedUsers" title="User">
@@ -83,7 +101,7 @@
                         </select>
 
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-sm-2" >
 
 
                         <Label><small>Activity</small></Label>
@@ -95,7 +113,7 @@
                     </div>
 
 
-                    <div class="col-sm-2">
+                    <div class="col-sm-2"  >
                         <Label><small>Document</small></Label>
                         <select id="Document" class="form-control" data-toggle="tooltip" ng-disabled="ctrlStatus.loadingDocument" data-placement="top" title="Document" ng-change="onWorkflowChange()" ng-model="filterData.selectedDocument">
                             <option ng-repeat="document in controlData.lookupDocument| orderBy : 'name'" value="{{document.name}}">{{document.name}}</option>
@@ -104,8 +122,10 @@
                     </div>
 
                     <div class="col-sm-2 ">
-
-                        <button type="button" ng-disabled="searching || ctrlStatus.loadingDocument || ctrlStatus.loadingActivity || ctrlStatus.loadingUser" class="btn green " data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Search"><i ng-show="!searching" class="fa fa-search ">Get</i>  <i class="fa fa-cog fa-spin" ng-show="searching"></i> </button>
+                        <button type="button" ng-hide="searching" ng-disabled="searching || ctrlStatus.loadingDocument || ctrlStatus.loadingActivity || ctrlStatus.loadingUser" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Get Activities based on the Criteria">
+                        <h4 ><img src="~/Content/Icons/Search Icon.png" class="text-warning" style="max-width:45px; max-height:50px;" /><span><strong>Get</strong></span></h4> </button>
+                                    
+                         <p class="text-info" ng-show="searching"><img src="~/Content/Icons/search.gif" style="max-width:65px; max-height:70px;" />Searching... </p>
 
                     </div>
 
