--- a/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator - OldTheme.cshtml
@@ -95,7 +95,7 @@ button:focus {
                                     <div class="col-sm-2 ">
 
                                     <Label><small>Start Date</small></Label>
-                                    <input type="text" class="form-control" placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+                                    <input id="startDateDataIndicator"  type="text" class="form-control cats-datepicker2 " placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
                                 
                                 </div>
                                 </td>
@@ -103,7 +103,7 @@ button:focus {
                                 <td>
                                     <div  class="col-sm-2 ">
                                     <Label><small>End Date</small></Label>
-                                    <input type="text" class="form-control " placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+                                    <input type="text" id="endDateDataIndicator"  class="form-control " placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
 
                               
 
