--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -90,11 +90,12 @@ button:focus {
                     <div class="col-sm-2 ">
 
                         <Label><small>Start Date</small></Label>
-                        <input id="DAIStartDate" type="text" class="form-control " placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+                        <input id="startDateDataIndicator" type="text" class="form-control cats-datepicker2 " placeholder="Start Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedStartDate" title="Enter Start Date">
+
                     </div>
                     <div class="col-sm-2 ">
                         <Label><small>End Date</small></Label>
-                        <input type="text" id="DAIEndDate" class="form-control  " placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
+                        <input type="text" id="endDateDataIndicator" class="form-control  cats-datepicker2 " placeholder="End Date" data-toggle="tooltip" data-placement="top" ng-model="filterData.selectedEndDate" title="Enter End Date">
 
                     </div>
 
