--- a/Web/Areas/EarlyWarning/Views/HRD/_HRDLeftBar.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/_HRDLeftBar.cshtml
@@ -2,44 +2,46 @@
 @using Cats.Security
 @using Cats.Services.Security
 
-<div class="col-md-2  col-sm-3 skin-blue ">
-    <div class="row sidebar left-side">
-        <div class="hdr-blck ">Sidebar Menu</div>
-        <ul class="sidebar-menu">
-           <li>
-        @Html.EarlyWarningOperationButton(
-                            @Url.Action("Index", "HRD"),
-                            EarlyWarningConstants.Operation.View_HRD_list, "<i class=\"fa fa-inbox\"></i> HRD Lists")
-    </li>
-            <li>
-                @Html.EarlyWarningOperationButton(
-                    @Url.Action("ApprovedHRDs", "HRD"),
-                    EarlyWarningConstants.Operation.View_Approved_HRD, "<i class=\"fa fa-inbox\"></i> Approved HRD")
-            </li>
-            <li>
-                @Html.EarlyWarningOperationButton(
-                            @Url.Action("OldHRD", "HRD"),
-                            EarlyWarningConstants.Operation.View_Approved_HRD, "<i class=\"fa fa-inbox\"></i> Old HRD List")
-            </li>
-    <li>
-        @Html.EarlyWarningOperationButton(
-                            @Url.Action("CurrentHRDs", "HRD"),
-                            EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-inbox\"></i> Current HRD")
-    </li>
-    <li>
-        @Html.EarlyWarningOperationButton(
-                            @Url.Action("Compare", "HRD"),
-                            EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-inbox\"></i> Compare HRD ")
-    </li>
-   
-     
-    <li>
-        @Html.EarlyWarningOperationButton(
-                            @Url.Action("Index", "Contribution"),
-                            EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-plus\"></i> Donors Contribution")
-    </li>  
-
-        </ul>
+<div class="col-md-3">
+    <div class="portlet light bg-inverse">
+        <div class="portlet-title">
+            <div class="caption font-green-sharp">
+                <span class="caption-subject bold uppercase"> @Html.Translate("HRD Types")</span>
+            </div>
+        </div>
+        <div class="portlet-body">
+            <ul class="ver-inline-menu tabbable margin-bottom-10">
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                        @Url.Action("Index", "HRD"),
+                        EarlyWarningConstants.Operation.View_HRD_list, "<i class=\"fa fa-inbox\"></i> HRD Lists")
+                </li>
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                @Url.Action("ApprovedHRDs", "HRD"),
+                EarlyWarningConstants.Operation.View_Approved_HRD, "<i class=\"fa fa-inbox\"></i> Approved HRD")
+                </li>
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                        @Url.Action("OldHRD", "HRD"),
+                        EarlyWarningConstants.Operation.View_Approved_HRD, "<i class=\"fa fa-inbox\"></i> Old HRD List")
+                </li>
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                        @Url.Action("CurrentHRDs", "HRD"),
+                        EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-inbox\"></i> Current HRD")
+                </li>
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                        @Url.Action("Compare", "HRD"),
+                        EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-inbox\"></i> Compare HRD ")
+                </li>
+                <li>
+                    @Html.EarlyWarningOperationButton(
+                        @Url.Action("Index", "Contribution"),
+                        EarlyWarningConstants.Operation.View_Current_HRD, "<i class=\"fa fa-plus\"></i> Donors Contribution")
+                </li>
+            </ul>
+        </div>
     </div>
-
 </div>
