--- a/Web/Areas/EarlyWarning/Views/HRD/RegionalSummary.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/RegionalSummary.cshtml
@@ -13,63 +13,63 @@
 }
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Regional Summary");
+    ViewBag.PageTitleDescription = "";
 }
 
-@section Title
-{
-Plans
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">
-        @Html.Translate("Regional Summary")
-    </h1>
-}
 <div class="row">
     @Html.Partial("_HRDLeftBar")
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="box-body row">
-                <div class="col-md-12">
-                    <div class="table-responsive">
-                        @(Html.Kendo().Grid(Model)
+    <div class="col-md-9">
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("Regional Summary")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
 
-                          .Name("grid")
-                          .Columns(columns =>
-                                       {
-                                           foreach (System.Data.DataColumn column in Model.Columns)
-                                           {
-                                               if (column.DataType == typeof(decimal))
-                                               { columns.Bound(column.ColumnName).HtmlAttributes(new { align = "right" }).Format("{0:N2}"); }
-                                               else if (column.DataType == typeof(int))
-                                               {
-                                                   columns.Bound(column.ColumnName).HtmlAttributes(new { align = "right" }).Format("{0:N0}");
-                                               }
-                                               else
-                                               {
-                                                   columns.Bound(column.ColumnName);
-                                               }
-
-                                           }
-                                       })
-                          .Pageable(t => t.PageSizes(new[] { 10, 15, 20, 30, 50, 100 }))
-                          .Sortable()
-                          .Groupable()
-                          )
-                    </div>
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
                 </div>
             </div>
+            <div class="portlet-body">
+                <div class="table-responsive" style="overflow-x: visible !important;">
+                    @(Html.Kendo().Grid(Model)
 
+                              .Name("grid")
+                              .Columns(columns =>
+                              {
+                                  foreach (System.Data.DataColumn column in Model.Columns)
+                                  {
+                                      if (column.DataType == typeof(decimal))
+                                      {
+                                          columns.Bound(column.ColumnName).HtmlAttributes(new { align = "right" }).Format("{0:N2}");
+                                      }
+                                      else if (column.DataType == typeof(int))
+                                      {
+                                          columns.Bound(column.ColumnName).HtmlAttributes(new { align = "right" }).Format("{0:N0}");
+                                      }
+                                      else
+                                      {
+                                          columns.Bound(column.ColumnName);
+                                      }
+
+                                  }
+                              })
+                              .Pageable(t => t.PageSizes(new[] { 10, 15, 20, 30, 50, 100 }))
+                              .Sortable()
+                              .Groupable()
+                    )
+                </div>
+            </div>
         </div>
     </div>
 </div>
 <div class="modal" id="cats-modal"></div>
-
-
-
 
 <script>
     $(function () {
