--- a/Web/Areas/EarlyWarning/Views/HRD/ApprovedHRDs.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/ApprovedHRDs.cshtml
@@ -8,93 +8,36 @@
 @model List<Cats.Models.ViewModels.HRD.HRDViewModel>
 
 @{
-    ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_CATSLayout.cshtml";
     var index = 0;
-}
-
-@section Title
-{
-Plans
-}
-
-@section PageTitle
-{
-    <h1 class="hdr-blck big ">
-        @Html.Translate("Approved HRD")
-    </h1>
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+    ViewBag.PageTitle = Html.Translate("Approved HRD");
+    ViewBag.PageTitleDescription = "";
 }
 
 <div class="row">
     @Html.Partial("_HRDLeftBar")
-    <div class="col-md-10  col-sm-9">
-        <div class=" box box-primary ">
-            <div class="box-body row">
-                <div class="text-right col-md-12">
+    <div class="col-md-9">
+        <div class="portlet light bordered">
+            <div class="portlet-title">
+                <div class="caption font-green-sharp">
+                    <i class="icon-list font-green-sharp"></i>
+                    <span class="caption-subject bold uppercase"> @Html.Translate("HRD Lists")</span>
+                </div>
+                <div class="tools">
+                    <a href="#" class="collapse" data-original-title="" title=""></a>
+                </div>
+                <div class="actions">
                     @Html.EarlyWarningOperationButton(
                         @Url.Action("Create", "HRD", new {Area = "EarlyWarning"}),
-                        EarlyWarningConstants.Operation.New_HRD, "<button type=\"button\" class=\"btn btn-success\"><span class=\"fa fa-plus\"></span> New HRD</button>", "btn", "btn_new_record")
+                        EarlyWarningConstants.Operation.New_HRD, "<button type=\"button\" class=\"btn btn-sm green\"><span class=\"fa fa-plus\"></span> New HRD</button>", "btn", "btn_new_record")
+                    <a class="btn btn-icon-only btn-default fullscreen"></a>
                 </div>
-                <div class="col-md-12">
-
-
-                    @*<div class="table-responsive">
-                        
-@(Html.Kendo().Grid<Cats.Models.ViewModels.HRD.HRDViewModel>()
-    .Name("grid")
-    .Columns(columns =>
-    {
-
-        columns.Bound(p => p.Plan).Title(Html.Translate("HRD Name")).ClientTemplate(
-                            @Html.EarlyWarningOperationButton(
-                                @Url.Action("Detail", "HRD", new { id = "#=HRDID#" }),
-                                EarlyWarningConstants.Operation.New_HRD, "#=Plan#").ToString());
-        columns.Bound(p => p.Ration).Title("Ration No");
-        columns.Bound(p => p.StartDate).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-        columns.Bound(p => p.EndDate).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-        columns.Bound(p => p.CreatedBy);
-        columns.Bound(p => p.CreatedDatePref).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" }).Width(120);
-
-        columns.Bound(p => p.Status);
-
-        columns.Command(p =>
-        {
-            if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Modify_HRD))
-            {
-                p.Custom("Edit").Click("hrdEdit").Text("<span class=\"fa fa-pencil-square-o\"></span> Edit ");
-            }
-            if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.Publish_HRD))
-            {
-                p.Custom("Publish").Click("publishHRD").Text("<span class=\"fa fa-check\"></span> Publish ");
-            }
-            if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.HRD_Summary))
-            {
-                p.Custom("Summary").Click("showSummary").Text("<span class=\"fa fa-list\"></span> Summary ");
-            }
-
-        });
-
-    })
-    .Scrollable()
-    .Sortable()
-     .Pageable()
-      .Events(e => e.DataBound("onDataBound"))
-    .DataSource(dataSource => dataSource
-          .Ajax()
-            .Model(model => model.Id(p => p.HRDID))
-            .Read(read => read.Action("ApprovedHRD_Read", "HRD"))
-
-     )
-
-      )
-
-                    @*</div>*@
-
-
-
-                    <div class="table-responsive">
-                        <table class="table table-striped table-condensed">
-                            <thead>
+            </div>
+            <div class="portlet-body">
+                <div class="table-responsive" style="overflow-x: visible !important;">
+                    <table class="table table-striped table-condensed">
+                        <thead>
                             <tr>
                                 <th>HRD Name</th>
                                 <th>Ration No</th>
@@ -105,8 +48,8 @@ Plans
                                 <th>Status</th>
                                 <th>Actions</th>
                             </tr>
-                            </thead>
-                            <tbody>
+                        </thead>
+                        <tbody>
                             @foreach (HRDViewModel item in Model)
                             {
                                 index++;
@@ -134,15 +77,15 @@ Plans
                                     <td>
                                         @item.Status
                                     </td>
-                                    <td>                                      
+                                    <td>
                                         @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.HRD_Summary))
                                         {
-                                            <a href='@Url.Action("RegionalSummary", "HRD", new {id = item.HRDID})' class="btn-primary btn-large">
+                                            <a href='@Url.Action("RegionalSummary", "HRD", new {id = item.HRDID})' class="btn btn-default dropdown-toggle btn-xs blue-stripe">
                                                 @*<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>*@
                                                 Summary
                                             </a>
                                         }
-                                        &nbsp;
+                                        
                                         <div class="btn-group">
                                             <button type="button" id="action_@index" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
                                                 <i class="fa fa-ellipsis-horizontal"></i> @Html.Translate("Workflow") <i class="fa fa-angle-down"></i>
@@ -174,40 +117,29 @@ Plans
                                     </td>
                                 </tr>
                             }
-                            </tbody>
-                        </table>
-                    </div>
-
-
-
-
-
-
-
-
-
-
-
+                        </tbody>
+                    </table>
                 </div>
-
             </div>
+        </div>
+        
+    </div>
+</div>
+
+<div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 id="modalHistoryLabel">Activity History</h4>
+            </div>
+            <div class="modal-body" id="modalHistoryBody">History</div>
+
         </div>
     </div>
 </div>
-               <div id="modalHistory" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
-                   <div class="modal-dialog">
-                       <div class="modal-content">
-                           <div class="modal-header">
-                               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                               <h4 id="modalHistoryLabel">Activity History</h4>
-                           </div>
-                           <div class="modal-body" id="modalHistoryBody">History</div>
 
-                       </div>
-                   </div>
-               </div>
-               @Html.Partial("~/Views/Shared/_PromotWorkflow.cshtml");
-
+@Html.Partial("~/Views/Shared/_PromotWorkflow.cshtml");
 
 <script>
     function onDataBound(e) {
@@ -257,6 +189,7 @@ Plans
     }
 
 </script>
+
 <script>
     // Workflow Implementation
     var history_link = "@Url.Action("History", "BusinessProcess", new { Area = "WorkflowManager", id = "0" })";
