--- a/Web/Areas/EarlyWarning/Views/HRD/CurrentHRDs.cshtml
+++ b/Web/Areas/EarlyWarning/Views/HRD/CurrentHRDs.cshtml
@@ -7,79 +7,34 @@
 @using Cats.Models.ViewModels.HRD
 @model List<Cats.Models.ViewModels.HRD.HRDViewModel>
     @{
-        ViewBag.Title = "Create";
-        Layout = "~/Views/Shared/_CATSLayout.cshtml";
         var index = 0;
-    }
-
-    @section Title
-{
-        Plans
-    }
-
-    @section PageTitle
-{
-        <h1 class="hdr-blck big ">
-            @Html.Translate("Current HRD")
-        </h1>
+        ViewBag.Title = "Index";
+        Layout = "~/Views/Shared/NewTheme _MainLayout.cshtml";
+        ViewBag.PageTitle = Html.Translate("Current HRD");
+        ViewBag.PageTitleDescription = "";
     }
 
     <div class="row">
         @Html.Partial("_HRDLeftBar")
-        <div class="col-md-10  col-sm-9">
-            <div class=" box box-primary ">
-                <div class="box-body row">
-                    <div class="text-right col-md-12">
-                        @Html.EarlyWarningOperationButton(
-                        @Url.Action("Create", "HRD", new { Area = "EarlyWarning" }),
-                        EarlyWarningConstants.Operation.New_HRD, "<button type=\"button\" class=\"btn btn-success\"><span class=\"fa fa-plus\"></span> New HRD</button>", "btn", "btn_new_record")
+        <div class="col-md-9">
+            <div class="portlet light bordered">
+                <div class="portlet-title">
+                    <div class="caption font-green-sharp">
+                        <i class="icon-list font-green-sharp"></i>
+                        <span class="caption-subject bold uppercase"> @Html.Translate("HRD Lists")</span>
                     </div>
-                    @*<div class="col-md-12">
-                                            <div class="table-responsive">
-                        @(Html.Kendo().Grid<Cats.Models.ViewModels.HRD.HRDViewModel>()
-                            .Name("grid")
-                            .Columns(columns =>
-                            {
-                                //columns.Bound(p => p.HRDName);
-                                columns.Bound(p => p.Plan).Title(Html.Translate("HRD Name")).ClientTemplate(
-                                                    @Html.EarlyWarningOperationButton(
-                                                        @Url.Action("Detail", "HRD", new { id = "#=HRDID#" }),
-                                                        EarlyWarningConstants.Operation.View_HRD_Detail, "#=Plan#").ToString());
-                                columns.Bound(p => p.Ration).Title("Ration No");
-                                columns.Bound(p => p.StartDate).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-                                columns.Bound(p => p.EndDate).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-                                columns.Bound(p => p.CreatedBy);
-                                columns.Bound(p => p.CreatedDatePref).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" }).Width(100);
-                                // columns.Bound(p => p.PublishedDate).Format("{0:MM/dd/yyyy}");
-                                columns.Bound(p => p.Status);
-
-                                columns.Command(p =>
-                                {
-                                    //p.Custom("Edit").Click("hrdEdit").Text("<span class=\"fa fa-pencil-square-o\"></span> Edit ");
-                                    if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.HRD_Summary))
-                                    {
-                                        p.Custom("Summary").Click("showSummary").Text("<span class=\"fa fa-list\"></span> Summary ");
-                                    }
-
-                                });
-
-                            })
-                            .Scrollable()
-                            .Sortable()
-                             .Pageable()
-                              .Events(e => e.DataBound("onDataBound"))
-                            .DataSource(dataSource => dataSource
-                                  .Ajax()
-                                    .Model(model => model.Id(p => p.HRDID))
-                                    .Read(read => read.Action("CurrentHRD_Read", "HRD"))
-
-                             )
-
-                              )
-
-                                            </div>
-                                        </div>*@
-                    <div class="table-responsive">
+                    <div class="tools">
+                        <a href="#" class="collapse" data-original-title="" title=""></a>
+                    </div>
+                    <div class="actions">
+                        @Html.EarlyWarningOperationButton(
+                                                    @Url.Action("Create", "HRD", new { Area = "EarlyWarning" }),
+                                                    EarlyWarningConstants.Operation.New_HRD, "<button type=\"button\" class=\"btn btn-sm green\"><span class=\"fa fa-plus\"></span> New HRD</button>", "btn", "btn_new_record")
+                        <a class="btn btn-icon-only btn-default fullscreen"></a>
+                    </div>
+                </div>
+                <div class="portlet-body">
+                    <div class="table-responsive" style="overflow-x: visible !important;">
                         <table class="table table-striped table-condensed">
                             <thead>
                                 <tr>
@@ -125,12 +80,12 @@
 
                                             @if (UserAccountHelper.EarlyWarningPsnpOperationCheck(EarlyWarningConstants.Operation.HRD_Summary))
                                             {
-                                                <a href='@Url.Action("RegionalSummary", "HRD", new {id = item.HRDID})' class="btn-primary btn-large">
-                                                    @*<span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>*@
+                                                <a href='@Url.Action("RegionalSummary", "HRD", new {id = item.HRDID})' class="btn btn-xs btn-default blue-stripe">
+
                                                     Summary
                                                 </a>
                                             }
-                                            &nbsp;
+
                                             <div class="btn-group">
                                                 <button type="button" id="action_@index" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
                                                     <i class="fa fa-ellipsis-horizontal"></i> @Html.Translate("Workflow") <i class="fa fa-angle-down"></i>
@@ -160,7 +115,6 @@
                             </tbody>
                         </table>
                     </div>
-
                 </div>
             </div>
         </div>
